# ai-employee-assistant

./: README.md  docker-compose.yml
agent/: Dockerfile  main.py  pyproject.toml
client/: Dockerfile  index.html  package.json  vite.config.ts
client/src/: App.tsx  index.css  utils.ts
client/src/components/: AgentInput.tsx  Conversation.tsx
database/: init.sql
